--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -28,6 +28,9 @@
 		<h1>
 			Bienvenido
 			<h:outputText value="#{authMb.currentUser.email}" />
+			<img alt="profile photo" src="resources/media/user.svg"
+				class="rounded-circle" />
+
 		</h1>
 		<f:view>
 			<h2>Ultimos Post</h2>
